// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SCR_ExecuteLayoutString (pure) > CTF scoreboard (ctf/g_ctf.c CTFScoreboardMessage) 1`] = `
[
  "str 200,148 "4"",
  "dirty 160,162",
  "dirty 319,193",
  "alt 160,162 "  7 999 Player      "",
  "dirty 216,162",
  "dirty 239,185",
  "pic 216,162 sbfctf2",
  "dirty 320,162",
  "dirty 479,193",
  "str 320,162 " -3  45 Alice       "",
  "alt 160,290 "Spectators"",
]
`;

exports[`SCR_ExecuteLayoutString (pure) > deathmatch scoreboard (p_hud.c DeathmatchScoreboardMessage) 1`] = `
[
  "dirty 160,152",
  "dirty 319,183",
  "alt 192,152 "Player"",
  "str 192,160 "Score: "",
  "alt 248,160 "15"",
  "str 192,168 "Ping:  50"",
  "str 192,176 "Time:  3"",
  "pic 160,152 /players/male/grunt_i",
  "dirty 192,152",
  "dirty 215,175",
  "pic 192,152 tag1",
  "dirty 320,152",
  "dirty 479,183",
  "alt 352,152 "Bob"",
  "str 352,160 "Score: "",
  "alt 408,160 "-2"",
  "str 352,168 "Ping:  999"",
  "str 352,176 "Time:  12"",
  "pic 320,152 /players/male/grunt_i",
]
`;

exports[`SCR_ExecuteLayoutString (pure) > dm_statusbar: frags, spectator, chase 1`] = `
[
  "dirty 160,456",
  "dirty 210,479",
  "pic 162,456 num_1",
  "pic 178,456 num_0",
  "pic 194,456 num_0",
  "dirty 210,456",
  "dirty 233,479",
  "pic 210,456 i_health",
  "dirty 260,456",
  "dirty 310,479",
  "pic 278,456 num_5",
  "pic 294,456 num_0",
  "dirty 310,456",
  "dirty 333,479",
  "pic 310,456 a_bullets",
  "dirty 360,456",
  "dirty 410,479",
  "pic 378,456 num_2",
  "pic 394,456 num_5",
  "dirty 410,456",
  "dirty 433,479",
  "pic 410,456 i_jacketarmor",
  "dirty 456,456",
  "dirty 479,479",
  "pic 456,456 i_health",
  "dirty 590,2",
  "dirty 640,25",
  "pic 592,2 num_minus",
  "pic 608,2 num_1",
  "pic 624,2 num_2",
  "alt 160,422 "SPECTATOR MODE"",
  "str 160,412 "Chasing"",
  "str 224,412 "Grunt"",
]
`;

exports[`SCR_ExecuteLayoutString (pure) > help computer (p_hud.c HelpComputer) 1`] = `
[
  "dirty 192,128",
  "dirty 215,151",
  "pic 192,128 help",
  "alt 362,132 "medium"",
  "alt 280,144 "Outer Base"",
  "alt 244,174 "Locate the Security"",
  "alt 260,182 "Pass and escape"",
  "alt 232,230 "No secondary objective"",
  "alt 210,284 " kills     goals    secrets"",
  "alt 210,292 "  3/ 27     0/1       1/3"",
]
`;

exports[`SCR_ExecuteLayoutString (pure) > single_statusbar full HUD 1`] = `
[
  "dirty 160,456",
  "dirty 210,479",
  "pic 162,456 num_1",
  "pic 178,456 num_0",
  "pic 194,456 num_0",
  "dirty 210,456",
  "dirty 233,479",
  "pic 210,456 i_health",
  "dirty 260,456",
  "dirty 310,479",
  "pic 278,456 num_5",
  "pic 294,456 num_0",
  "dirty 310,456",
  "dirty 333,479",
  "pic 310,456 a_bullets",
  "dirty 360,456",
  "dirty 410,479",
  "pic 378,456 num_2",
  "pic 394,456 num_5",
  "dirty 410,456",
  "dirty 433,479",
  "pic 410,456 i_jacketarmor",
  "dirty 456,456",
  "dirty 479,479",
  "pic 456,456 i_health",
]
`;

exports[`SCR_ExecuteLayoutString (pure) > single_statusbar: no ammo/armor sections when icons are 0, negative ammo hidden, armor < 1 hidden 1`] = `
[
  "dirty 160,456",
  "dirty 210,479",
  "pic 162,456 num_1",
  "pic 178,456 num_0",
  "pic 194,456 num_0",
  "dirty 210,456",
  "dirty 233,479",
  "pic 210,456 i_health",
  "dirty 310,456",
  "dirty 333,479",
  "pic 310,456 a_bullets",
  "dirty 410,456",
  "dirty 433,479",
  "pic 410,456 i_jacketarmor",
  "dirty 456,456",
  "dirty 479,479",
  "pic 456,456 i_health",
]
`;

exports[`SCR_ExecuteLayoutString (pure) > single_statusbar: pickup, timer, help icon 1`] = `
[
  "dirty 160,456",
  "dirty 210,479",
  "pic 162,456 num_1",
  "pic 178,456 num_0",
  "pic 194,456 num_0",
  "dirty 210,456",
  "dirty 233,479",
  "pic 210,456 i_health",
  "dirty 260,456",
  "dirty 310,479",
  "pic 278,456 num_5",
  "pic 294,456 num_0",
  "dirty 310,456",
  "dirty 333,479",
  "pic 310,456 a_bullets",
  "dirty 360,456",
  "dirty 410,479",
  "pic 378,456 num_2",
  "pic 394,456 num_5",
  "dirty 410,456",
  "dirty 433,479",
  "pic 410,456 i_jacketarmor",
  "dirty 456,456",
  "dirty 479,479",
  "pic 456,456 i_health",
  "dirty 160,430",
  "dirty 183,453",
  "pic 160,430 p_quad",
  "str 186,438 "Bullets"",
  "dirty 422,430",
  "dirty 456,453",
  "pic 440,430 num_7",
  "dirty 456,430",
  "dirty 479,453",
  "pic 456,430 p_quad",
  "dirty 308,430",
  "dirty 331,453",
  "pic 308,430 i_help",
]
`;
